@@ -3,7 +3,7 @@ plugins {
 }
 
 group = "org.cakk.unused-code-detector"
-version = "1.0.1"
+version = "1.0.2"
 
 repositories {
     mavenCentral()
@@ -25,7 +25,7 @@ intellij {
 tasks {
     patchPluginXml {
         sinceBuild.set("233")
-        untilBuild.set("253.*")
+        untilBuild.set("263.*")
 
         version.set(project.version.toString())
         pluginDescription.set("""
@@ -56,6 +56,34 @@ tasks {
             <ul>
                 <li>🎉 add unused variable feature</li>
             </ul>
+            <h3>Version 1.0.2</h3>
+            <ul>
+                <li>🎉 Upgrade version to support IntelliJ 2026.3</li>
+            </ul>
         """.trimIndent())
+    }
+
+    runIde {
+        jvmArgs(
+            "-Xmx2g",
+            "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
+            "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+        )
+    }
+
+    compileJava {
+        options.encoding = "UTF-8"
+        // Disable module warnings
+        options.compilerArgs.add("-Xlint:-module")
+        // Add the desktop module
+        options.compilerArgs.add("--add-modules=java.desktop")
+    }
+
+    clean {
+        delete("src/main/java/module-info.java")
     }
 }
